--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ name: 'sensors-lab'
 services:
   ros-docker:
     image: test/docker_image 
-    entrypoint: ["/bin/bash", "-ci", "cd /ros_ws && catkin build && source devel/setup.bash"]
+    entrypoint: ["/bin/bash", "-ci", "source /opt/ros/noetic/setup.bash && cd /ros_ws && catkin build && source /ros_ws/devel/setup.bash && roslaunch sensors_lab solution.launch"]
     container_name: ros_noetic_container
     stdin_open: true
     tty: true
