feat: building ros environment when building devcontainer

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -24,5 +24,6 @@
         "--ipc", "host",
     ],
     "workspaceMount": "type=bind,src=${localWorkspaceFolder},target=/ros_ws/src/solution",
-    "workspaceFolder": "/ros_ws/src/solution"
+    "workspaceFolder": "/ros_ws/src/solution",
+    "postStartCommand": "cd /ros_ws/src/solution && catkin build"
 }
