--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -18,6 +18,7 @@
         "-e", "DISPLAY=${env:DISPLAY}",
         "-e", "XAUTHORITY=${env:XAUTHORITY}", 
         "-e", "QT_X11_NO_MITSHM=1",
+        "-e", "GUI=true",
         "-v", "/tmp/.X11-unix:/tmp/.X11-unix:rw",
         "-v", "/etc/localtime:/etc/localtime:ro",
         "-v", "/dev:/dev",
